--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -315,8 +315,8 @@
                     </tr>
                     </tbody>
                   </table>
-
                 </div>
+
                 <div class="extra content footer" style="padding: 0 0 0 0;background-color: #e97d68;height: 55px;border-radius: 3px !important;">
                   <p style="text-align: center;color: white;letter-spacing: 2px;padding-top: 17.5px;">SELECT</p>
                 </div>
@@ -324,8 +324,8 @@
             </div>
           </div>
 
-          <table class="ui table" style="padding-left: 0">
 
+          <table class="ui table" style="padding-left: 0">
             <thead>
             <tr>
               <th style="font-weight: 500;font-size: 20px;padding-left: 60px;">Single Follow-up Appointments within 3 months of initial consultation</th>
@@ -343,6 +343,133 @@
   </div>
 
   <div class="ui vertical stripe intro segment" id="FAQs" style="padding-top: 10em">
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="ui stackable grid container">
+      <span class="library" style="font-size: 4em;position: relative;left:2.4%">FAQs</span><br>
+        <div class="row" style="margin: 0 0;margin-top: 2em">
+          {{#ui-accordion class="styled"}}
+            <div class="title" style="color: white;background-color: #ec6060;padding: 1em;">
+              How do I set up Video Conferencing:
+            </div>
+            <div class="content" style="color: white;background-color: rgba(236, 96, 96, 0.6);padding: 1em;line-height: 1.6em;">
+              Skype
+            </div>
+          {{/ui-accordion}}
+        </div>
+        <div class="row" style="margin: 0 0;">
+          {{#ui-accordion class="styled"}}
+            <div class="title" style="color: white;background-color: #7e5c8c;padding: 1em;">
+              How do I upload Photos:
+            </div>
+            <div class="content" style="color: white;background-color: #7e5c8c9e;padding: 1em;line-height: 1.6em;">
+              The ability for you to stand in front of your webcam for posture analysis
+              will be important. It is best if you are wearing shorts and a tank top so that
+              your legs are visible above the knees and your shoulders and arms are
+              visible. You are in your bare feet. You may choose to upload 4 posture photos prior to the
+              appointment, as this will expedite the assessment process.
+            </div>
+          {{/ui-accordion}}
+        </div>
+        <div class="row" style="margin: 0 0;">
+          {{#ui-accordion class="styled"}}
+            <div class="title" style="color: white;background-color: #a7587f;padding: 1em;">
+              What happens during my 1st appointment:
+            </div>
+            <div class="content" style="color: white;background-color: #a7587fbd;padding: 1em;line-height: 1.6em;">
+              At evaluation we will discuss your symptoms and your general health history
+              I may ask you to perform several movements during your assessment,
+              so having the space in front of your webcam for you to stand, sit or lie on the floor
+              would be excellent.<br><br>
+              After the initial evaluation, I will recommend a specific sequence of movements or exercises.
+              This sequence is called a menu. This menu is designed to relieve your symptoms
+              and improve your overall joint alignment and body balance. It is designed to be performed
+              daily for maximum results.<br><br>
+              This initial online consultation will be approximately 60-90 minutes.
+            </div>
+          {{/ui-accordion}}
+        </div>
+      <div class="row" style="margin: 0 0;">
+        {{#ui-accordion class="styled"}}
+          <div class="title" style="color: white;background-color: #51a990;padding: 1em;">
+            What is a follow up assessement?
+          </div>
+          <div class="content" style="color: white;background-color: #51a990a1;padding: 1em;line-height: 1.6em;">
+            A followup consultation is scheduled in a week to review your
+            menu and make changes. Your followup will be approximately 30-45 minutes.
+          </div>
+        {{/ui-accordion}}
+      </div>
+      <div class="row" style="margin: 0 0;">
+        {{#ui-accordion class="styled"}}
+          <div class="title" style="color: white;background-color: #4297b7;padding: 1em;">
+            What if you can’t help my problem?
+          </div>
+          <div class="content" style="color: white;background-color: #4297b7b8;padding: 1em;line-height: 1.6em;">
+            If I feel that your condition is not suitable for online treatment, I will refund your money
+            and suggest a suitable alternative type of treatment for you.
+          </div>
+        {{/ui-accordion}}
+      </div>
+    </div>
+  </div>
+
+  <div class="alternate ui stripe vertical segment" id="contact" style="padding-top: 8em">
+    <div class="ui three column doubling stackable grid container">
+      <span class="library" style="font-size: 4em;position: relative;left:2.4%">Contact Us</span><br>
+      <div class="row">
+        <div class="column">
+          <div class="row">
+            <i class="phone icon" style="color: #6ac9c8;left: 46%;position: relative;font-size: 200%;"></i>
+          </div>
+          <div class="row">
+            <h3 style="text-align: center">+12269841252</h3>
+          </div>
+        </div>
+        <div class="column">
+          <div class="row">
+            <i class="envelope icon" style="color: #6ac9c8;left: 46%;position: relative;font-size: 200%;"></i>
+          </div>
+          <div class="row">
+            <h3 style="text-align: center">youda@uwo.ca</h3>
+          </div>
+        </div>
+        <div class="column">
+          <div class="row">
+            <i class="map marker alternate icon" style="color: #6ac9c8;left: 46%;position: relative;font-size: 200%;"></i>
+          </div>
+          <div class="row">
+            <h3 style="text-align: center">817 Silversmith St</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui vertical stripe intro segment" style="padding: 0">
+    <div class="row">
+      <iframe width="100%" height="400px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJN-4699DCOogRWy1yYa3Hdrc&key=AIzaSyC8E7g5IViDPVpUSV-TTiEd0VRgkNz7EEc" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <div class="ui black inverted vertical footer segment" style="padding-top: 8em;padding-bottom: 4em">
+    <div class="ui center aligned container">
+      <div class="ui stackable inverted grid">
+        <br>
+      </div>
+      <br><br>
+      <div class="ui inverted section divider"></div>
+      <div class="ui hidden divider"></div>
+      <div class="row">
+        <div class="ui horizontal inverted small divided link list">
+          <a class="item">Powered By: </a>
+        </div>
+      </div>
+      <div class="row" style="    position: relative;">
+        <img src="assets/images/Brigade.png" class="ui centered mini image" style="    height: 50px;width: auto;left: 50%;position: absolute;transform: translate(-50%, 20%);">
+      </div>
+      <br><br>
+
+
+    </div>
   </div>
 {{/nav-bar}}
