--- a/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/nav-bar.hbs
@@ -25,8 +25,8 @@
               <a class="item scroll" href="#about">About</a>
               <a class="item" href="#howItWorks">How it Works</a>
               <a class="item" href="#services">Services</a>
-              <a class="item" href="#FAQs">FAQ's</a>
-              <a class="item">Contact</a>
+              <a class="item" href="#FAQs">FAQs</a>
+              <a class="item" href="#contact">Contact</a>
               {{#if loggedOut}}
                 <a id="login" class="item" {{action 'openModal'}}>Log in</a>
               {{else}}
