assigning a rehab plan to a client

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/assign-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/assign-rehabplan.hbs
@@ -1,4 +1,4 @@
-<div class="ui button" {{action "openModal"}}>
+<div class="ui centered {{disabled}} button" {{action "openModal"}}>
   Assign
 </div>
 
