--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-answers.hbs
@@ -1,5 +1,3 @@
-{{!-- <script type="text/javascript">$(document).ready(function(){$(".rating").rating();});</script> --}}
-
 <div class="ui form">
   <br>
   {{#if question.sa}}
@@ -16,8 +14,7 @@
     {{ui-rating
       class="heart"
       maxRating=10
-      rating=rateValue
-      onRate=(action "ratingSave")
+      onRate=(action "ratingSave" rateValue=value)
     }}
   {{/if}}
 
